Hopefully this will stop the tweet widgets from overflowing.

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ background-height: 100%; background-attachment: fixed; }
 .post .post_info .post_comments span.small { font-size: 77%; }
 .post .post_info .post_comments a { text-decoration: none; color: #333; }
 .post .post_info .post_social { background-color: #ccc; border-radius: 0px 0px 0px 5px; text-align: center; }
+.post .post_info .post_social div.aligncenter { overflow: hidden; }
 .post .post_info .post_social div.aligncenter span { margin: 0px auto; display: block; margin-bottom: 10px; width: 50px; }
 .post .post_info div span.big { font-size: 24px; font-weight: bold; display: block; line-height: 24px; }
 .post .post_info div span.small { font-size: 12px; font-weight: normal; text-transform: uppercase; display: block; line-height: 12px; }
